deploy/k8s/base/gateway-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: kigvuzy/gateway:latest
          imagePullPolicy: Always
          resources:
          ports:
            - name: gateway-service
              containerPort: 4000
