deploy/k8s/base/gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      protocol: TCP
