deploy/k8s/base/gateway-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-service-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: gateway-service
      port:
        number: 4000
  rules:
    - host: api.books.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/gateway/v1"
            backend:
              service:
                name: gateway-service
                port:
                  number: 4000
